# JC8E

./: .doodles.autosave.xopp  .gitignore  CMakeLists.txt  README.md  TODO.md  doodles.xopp
include/: application.hpp  commons.hpp
include/CHIP_8/: CPU.hpp  ICPU.hpp  IController.hpp  IRAM.hpp  Idisplay.hpp  RAM.hpp  controller.hpp  display.hpp
include/emulation/: emulator.hpp  inputMapper.hpp  renderer.hpp
include/timing/: timing.hpp
src/: application.cpp  main.cpp
src/CHIP_8/: CPU.cpp  RAM.cpp  controller.cpp  display.cpp
src/emulation/: emulator.cpp  inputMapper.cpp  renderer.cpp
tests/: test_InputMapper.cpp  test_controller.cpp  test_cpu.cpp  test_display.cpp  test_emulation.cpp  test_ram.cpp  test_renderer.cpp
tests/include/: mocks.hpp
tests/manual/: test_interface1.cpp  test_interface2.cpp
